pages/user/UserProfile.module.css
.main {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100dvw;
  background: linear-gradient(132deg, var(--user-color-primary), var(--user-color-secondary));
  color: white;
  min-height: 100vh;

  .divPag {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    width: 100vw;

    @media (max-width: 768px) {
      align-items: center;
    }
  }
  .perfil{
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    align-items: flex-start;
    margin-left: 20px;
    gap: 8px;

    @media (max-width: 768px) {
      align-items: center;
      margin-left: unset;
    }
  }
  .moreInfo{
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    gap: 15px;
    width: 100vw;
  }



  .editPencil {
    backdrop-filter: var(--frosted-glass-blur);
    width: 24px;
    height: 24px;
    padding: 5px;
    border: var(--outline);
    border-radius: 5px;
    transition: var(--smooth-transition);
    box-shadow: var(--shadow);
  }

  .editPencil:hover {
    scale: var(--hover-scale);
  }

  .pixelsInfo{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 1rem;
    /* background-color: var(--color-mid); */
    border: var(--outline);
    border-radius: 12px;
    color: var(--color-muted);
    transition: var(--smooth-transition);
    width: 25vw;
    height: 12vh;
    padding: 5px;
    gap: 1px;
  }

  .pixelsText {
      font-size: 1.25rem;
      font-weight: 600;
      color: #9dcaff;
      max-width: 100%;
      text-overflow: ellipsis;
      height: auto;
      text-align: center;
  }

  .bgUser {
    width: 100%;
    height: 150px;
    object-fit: cover;
  }

  .avatarCircle {
    width: 180px;
    height: 180px;
    border: 5px solid #141c2f; /* Cor do fundo para separação */
    border-radius: 50%;
    margin-top: -90px;
    background-color: #141c2f; /* Evita transparência */
  }

  .avatarCircle img {
    width: 100%;
    height: 100%;
    border-radius: 50%;
    object-fit: cover;
  }

  .displayName {
    font-size: 2rem;
    font-family: 'Dogica Pixel', Arial, Helvetica, sans-serif;
  }

  .username {
    font-size: 1rem;
    color: #9dcaff;
    margin-bottom: 1rem;
    display: flex;
    align-items: center;
  }

  .description {
    position: relative;
  }

  .description textarea {
    width: 25vw;
    height: 12vh;
    border-radius: 12px;
    padding: 0.5rem;
    resize: none;
    border: none;
    font-size: 1rem;
    color: #fff;
    /* background-color: var(--color-mid); */
    border: var(--outline);
    box-shadow: var(--shadow);
    transition: var(--smooth-transition);
  }

  .guildCard, .description span, .description textarea, .pixelsInfo{
    min-width: 225px;
  }

  .description span {
    display: block;
    width: 25vw;
    height: 12vh;
    border-radius: 12px;
    padding: 0.5rem;
    font-size: 1rem;
    color: #fff;
    /* background-color: var(--color-mid); */
    white-space: pre-wrap;
    overflow-y: auto;
    position: relative;
    border: var(--outline);
    box-shadow: var(--shadow);
    transition: var(--smooth-transition);
  }

  .description span:hover {
      transform: translateY(-4px);
      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
  }

  .pixels {
    color: #ccc;
    font-size: 1rem;
    text-align: center;
  }

  .premiumIcon {
    font-size: 1.2rem;
  }


  .guildCard {
      display: flex;
      align-items: center;
      gap: 1rem;
      /* background-color: var(--color-mid);   */
      border: 1px solid var(--color-darkest);
      border-radius: 12px;
      color: #d0e6ff;
      transition: var(--smooth-transition);
      padding: 19px;
      width: 25vw;
      height: 12vh;
      border: var(--outline);
  }

  .guildCard:hover {
      transform: translateY(-4px);
      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
  }

  .guildIcon {
      width: 64px;
      height: 64px;
      border-radius: 12px;
      object-fit: cover;
      border: 2px solid #5599ff;
      background-color: #1a263f;
  }

  .guildInfo {
      flex: 1;
      display: flex;
      flex-direction: column;
      gap: 0.5rem;
      position: relative;
      width: 0%;
  }

  .guildName {
      font-size: 1.25rem;
      font-weight: 600;
      color: #9dcaff;
      /* white-space: nowrap;
      max-width: 100%;
      overflow: hidden;
      text-overflow: ellipsis; */
      text-align: start;
  }

  .guildLink {
      align-self: flex-start;
      background-color: var(--color-accent);
      color: white;
      padding: 0.5rem 1rem;
      border-radius: 8px;
      text-decoration: none;
      font-weight: bold;
      transition: var(--smooth-transition);
      border: var(--outline);
  }

  .guildLink:hover {
      background-color: var(--color-darker);
      scale: var(--hover-scale);
  }

  .viewPixelsButton {
    /* padding: 0.7rem 1.5rem; */
    color: white;
    border: var(--outline);
    box-shadow: var(--shadow);
    border-radius: 12px;
    font-size: 1rem;
    font-weight: bold;
    cursor: pointer;
    transition: var(--smooth-transition);  
    text-align: center;
    display: flex;
    align-items: center;
    height: 40%;
  }

  .viewPixelsButton:hover {
    transform: translateY(-2px);
    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.4);
    background: linear-gradient(135deg, #5599ff, #8e44ff);
  }
  .pixelsInfo{
      display: flex;
      justify-content: space-around;
      align-items: center;
      flex-direction: column;
      flex-wrap: nowrap;
      transition: var(--smooth-transition);
  }
  .pixelsInfo:hover {
    transform: translateY(-4px);
    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
  }
}

